Project

General

Profile

Actions

Bug #50115

closed

S3 event message eTag misspelled

Added by Tom Schoonjans about 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
pacific
Regression:
No
Severity:
4 - irritation
Reviewed:
Affected Versions:
ceph-qa-suite:
rgw
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

An S3 object event contains its eTag, currently spelled as 'etag' in the message structure, which does not correspond to the documentation example (https://docs.ceph.com/en/latest/radosgw/notifications/#events), or what is used by AWS (https://docs.aws.amazon.com/AmazonS3/latest/userguide/notification-content-structure.html).

The fix appears to be trivial (https://github.com/ceph/ceph/blob/88cc6f22315c8d205d6d0875ad35f92399cd5631/src/rgw/rgw_pubsub.cc#L277), and I am certainly willing to open a pull request for this. However, I wonder if the old spelling should also be kept in the event message structure in order not to break code that relies on this misspelling.


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #51045: pacific: S3 event message eTag misspelledResolvedYuval LifshitzActions
Actions #1

Updated by Tom Schoonjans about 3 years ago

By the way another difference between AWS and Ceph can be found in the value of the eventName key: Ceph prefixes them with 's3:', while AWS does not.

So on Ceph you would for example get:

"eventName":"s3:ObjectCreated:Put",

While on AWS this would be:

"eventName":"ObjectCreated:Put",

I don't know if this is a bug or was done intentional, but if you would like me to create a separate ticket for this, I will gladly do so.

Actions #2

Updated by Yuval Lifshitz about 3 years ago

  • Pull request ID set to 40608
Actions #3

Updated by Yuval Lifshitz about 3 years ago

according to AWS documentation: https://docs.ceph.com/en/latest/radosgw/notifications/#events
the event name is prefixed with "s3":

"eventName":"s3:ObjectCreated:Put",

similarly to what we use.

Actions #4

Updated by Tom Schoonjans about 3 years ago

Ceph does so indeed, but AWS does not. Look at the example at https://docs.aws.amazon.com/AmazonS3/latest/userguide/notification-content-structure.html

I was just wondering if this is ok, because I thought that you were looking for complete compatibility with AWS for the message structure.

Actions #5

Updated by Yuval Lifshitz about 3 years ago

  • Status changed from New to Fix Under Review
Actions #6

Updated by Tom Schoonjans about 3 years ago

This can be closed now as the corresponding PR has been merged in.

Actions #7

Updated by Yuval Lifshitz almost 3 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to pacific
Actions #8

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #51045: pacific: S3 event message eTag misspelled added
Actions #9

Updated by Loïc Dachary over 2 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF