rgw: fix spelling of eTag in S3 message structure

An S3 object event contains its eTag, currently spelled as 'etag' in the message structure, which does not correspond to the documentation example (https://docs.ceph.com/en/latest/radosgw/notifications/#events), or what is used by AWS (https://docs.aws.amazon.com/AmazonS3/latest/userguide/notification-content-structure.html).

Fixes bug https://tracker.ceph.com/issues/50115

Signed-off-by: Tom Schoonjans <Tom.Schoonjans@rfi.ac.uk>